// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericCallParamsMatcher Should match snapshot for all component types 1`] = `
.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  line-height: 0;
}

<div>
   
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="16"
      src="test"
    />
  </span>
   
  0x3f94...4351
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 2`] = `
<div>
   
  1000000000000000000
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 3`] = `
<div>
   
  1
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 4`] = `
<div>
   
  2022-05-29
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 5`] = `
<div>
   
  52 years
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 6`] = `
<div>
   
  false
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 7`] = `
<div>
   
  1
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 8`] = `
<div>
   
  QmXk294ZQebU6J7yYpAhBqBPaMquCKxGmGoNHLBpvUJ9on
   
</div>
`;

exports[`GenericCallParamsMatcher Should match snapshot for all component types 9`] = `
<div>
   
  Test String
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 1`] = `
.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  line-height: 0;
}

<div>
   
  <span
    matchedparam="addressParam"
  >
    <span
      class="c0"
    >
      <img
        alt="Avatar"
        class="c1 c2"
        data-testid="avatar"
        size="16"
        src="test"
      />
    </span>
     
    0x3f94...4351
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 2`] = `
<div>
   
  <span
    matchedparam="integerParam"
  >
    1000000000000000000
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 3`] = `
<div>
   
  <span
    matchedparam="decimalParam"
  >
    1
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 4`] = `
<div>
   
  <span
    matchedparam="dateParam"
  >
    2022-05-29
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 5`] = `
<div>
   
  <span
    matchedparam="timeParam"
  >
    52 years
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 6`] = `
<div>
   
  <span
    matchedparam="booleanParam"
  >
    false
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 7`] = `
<div>
   
  <span
    matchedparam="tokenAmountParam"
  >
    1
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 8`] = `
<div>
   
  <span
    matchedparam="contentHashParam"
  >
    QmXk294ZQebU6J7yYpAhBqBPaMquCKxGmGoNHLBpvUJ9on
  </span>
   
</div>
`;

exports[`GenericCallParamsMatcher replaces all component types correctly 9`] = `
<div>
   
  <span
    matchedparam="otherParam"
  >
    Test String
  </span>
   
</div>
`;
